@@ -104,6 +104,7 @@ EXPORTS
     __assuan_socket			@83
     __assuan_connect			@84
     assuan_register_pre_cmd_notify	@85
+    assuan_socket_connect_fd		@86
 
 ; END
 
